hello I am fixing my old stuff, now I am gonna do Canvas once again this stuff is pure opium  .

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: rgb(0, 0, 0);
         }
 
-        /* #canvas1 {
+        #canvas1 {
 
             background-color: rgb(239, 239, 239);
             width: 1200px;
@@ -23,13 +23,13 @@
             left: 50%;
             transform: translate(-50%, -50%);
             filter: blur(8px) contrast(200%);
-        } */
+        }
     </style>
     <title>Line</title>
 </head>
 
 <body>
-    <!-- <input type="range" id="bar" min=-200 , max=200> -->
+    <input type="range" id="bar" min=-200 , max=200>
     <canvas id="canvas1">
 
     </canvas>
