--- a/index.html
+++ b/index.html
@@ -1,40 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="style.css"> -->
-
-    <link rel="shortcut icon" href="#" type="image/x-icon">
-    <style>
-        body {
-            background-color: rgb(0, 0, 0);
-        }
-
-        #canvas1 {
-
-            background-color: rgb(239, 239, 239);
-            width: 1200px;
-            height: 1000px;
-            position: absolute;
-            top: 50%;
-            bottom: 0;       
-            left: 50%;
-            transform: translate(-50%, -50%);
-            filter: blur(8px) contrast(200%);
-        }
-    </style>
-    <title>Line</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Helix Particle Lines</title>
+  <style>
+    html, body {
+      margin: 0;
+      overflow: hidden;
+      background: black;
+    }
+    #canvas1 {
+      position: fixed;
+      top: 0;
+      left: 0;
+      filter: blur(1.5px) contrast(180%);
+    }
+    #bar {
+      position: absolute;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 10;
+      width: 300px;
+    }
+  </style>
 </head>
-
 <body>
-    <input type="range" id="bar" min=-200 , max=200>
-    <canvas id="canvas1">
-
-    </canvas>
-    
-    <script type="module" src="assets/wave.js"></script>
+  <input type="range" id="bar" min="50" max="1000" value="200" />
+  <canvas id="canvas1"></canvas>
+  <script type="module" src="assets/wave.js"></script>
 </body>
-
 </html>
