--- a/index.html
+++ b/index.html
@@ -1,96 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Speed-Time-Distance Visualizer</title>
-    <link rel="shortcut icon" href="#" type="image/x-icon" />
-    <style>
-      * {
-        box-sizing: border-box;
-      }
 
-      body {
-        margin: 0;
-        font-family: "Segoe UI", sans-serif;
-        background-color: #f0f0f5;
-        color: #333;
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Speed-Time-Distance Graph</title>
+    <style>
+    body {
+        background-color: #fdf6e3;
+        font-family: Arial, sans-serif;
         display: flex;
         flex-direction: column;
         align-items: center;
-      }
-
-      header {
-        margin-top: 20px;
-        text-align: center;
-      }
-
-      h1 {
         margin: 0;
-        font-size: 1.8rem;
-      }
+        padding: 20px;
+    }
 
-      p {
-        font-size: 0.95rem;
-        color: #555;
-      }
-
-      #controls {
-        margin: 20px;
-        display: flex;
-        gap: 10px;
-        align-items: center;
-      }
-
-      input[type="number"] {
-        padding: 5px 10px;
-        font-size: 1rem;
-        width: 80px;
-      }
-
-      button {
-        padding: 6px 12px;
-        font-size: 0.9rem;
-        border: none;
-        background-color: #556ee6;
-        color: white;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-
-      button:hover {
-        background-color: #4053c1;
-      }
-
-      canvas {
+    canvas {
         border: 1px solid #ccc;
-        background-color: white;
-        margin-bottom: 20px;
-        max-width: 95vw;
-        max-height: 90vh;
-      }
+        background: white;
+        margin-top: 20px;
+        max-width: 100%;
+        height: auto;
+    }
 
-      @media (max-width: 600px) {
-        h1 {
-          font-size: 1.3rem;
-        }
-      }
-    </style>
-  </head>
+    #controls {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        max-width: 800px;
+        /* prevent wrapping */
+        flex-wrap: nowrap;
+    }
 
-  <body>
-    <header>
-      <h1>Speed vs Time Visualization</h1>
-      <p>
-        See how much time you actually save by speeding over short distances
-      </p>
-    </header>
+    label {
+        font-weight: bold;
+        user-select: none;
+        /* fix label width so distance value doesn't cause resize */
+        display: flex;
+        justify-content: space-between;
+        width: 130px;
+        min-width: 130px;
+    }
+
+    #distanceValue {
+        /* align the number right and fix width */
+        width: 40px;
+        text-align: right;
+        margin-left: 8px;
+    }
+
+    #distanceSlider {
+        width: 300px;
+    }
+
+    button {
+        cursor: pointer;
+        padding: 6px 12px;
+        font-size: 14px;
+        border: none;
+        background-color: #444;
+        color: white;
+        border-radius: 4px;
+        white-space: nowrap;
+    }
+
+    button:hover {
+        background-color: #222;
+    }
+</style>
+
+
+</head>
+
+<body>
     <div id="controls">
-      <input type="number" id="distance" value="40" min="1" /> km
-      <button id="update">Update Graph</button>
-      <button id="download">Download PNG</button>
+        <label for="distanceSlider">Distance (km): <span id="distanceValue">100</span></label>
+        <input type="range" id="distanceSlider" min="1" max="500" step="1" value="100" />
+        <button id="unitToggle">Switch to m/s</button>
+        <button id="downloadBtn">Download PNG</button>
     </div>
-    <canvas id="canvas1"></canvas>
+    <canvas id="canvas" width="800" height="600"></canvas>
+
     <script type="module" src="assets/speed-time-distance.js"></script>
-  </body>
+</body>
+
 </html>
