--- a/index.html
+++ b/index.html
@@ -1,83 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Random Shape Lines Animation</title>
-    <style>
-      body,
-      html {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        background: #111;
-        overflow: hidden;
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        color: #eee;
-        display: flex;
-        flex-direction: column;
-      }
-      #controls {
-        background: #222;
-        padding: 10px 15px;
-        display: flex;
-        gap: 15px;
-        align-items: center;
-      }
-      label {
-        font-weight: 600;
-        user-select: none;
-        display: flex;
-        flex-direction: column;
-        font-size: 14px;
-      }
-      input[type="number"] {
-        margin-top: 5px;
-        padding: 6px 8px;
-        font-size: 14px;
-        width: 100px;
-        border-radius: 4px;
-        border: none;
-      }
-      button {
-        background: #007bff;
-        color: white;
-        border: none;
-        padding: 7px 14px;
-        border-radius: 4px;
-        cursor: pointer;
-        font-size: 14px;
-        font-weight: 600;
-      }
-      button:hover {
-        background: #0056b3;
-      }
-      canvas {
-        flex: 1;
-        display: block;
-        background: #111;
-        cursor: crosshair;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="controls">
-      <label for="lineCountInput">
-        Number of Lines:
-        <input
-          type="number"
-          id="lineCountInput"
-          value="500"
-          min="10"
-          max="2000"
-        />
-      </label>
-      <button id="applyBtn">Apply</button>
-      <button id="resetBtn">Reset Positions</button>
-    </div>
-
-    <canvas id="canvas"></canvas>
-
-    <script src="assets/line.js" type="module"></script>
-  </body>
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>10 Animated Line Boxes — L, X, W Shapes</title>
+<style>
+  body {
+    background: linear-gradient(135deg, #a8edea, #fed6e3);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 20px;
+    color: #333;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    user-select: none;
+  }
+  h1 {
+    margin-bottom: 25px;
+    font-weight: 700;
+    letter-spacing: 1.2px;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.15);
+  }
+  #grid {
+    display: grid;
+    grid-template-columns: repeat(5, 180px);
+    grid-gap: 15px;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+  canvas {
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+    width: 180px;
+    height: 180px;
+    display: block;
+  }
+  footer {
+    font-size: 0.85rem;
+    color: #555;
+    opacity: 0.7;
+  }
+</style>
+</head>
+<body>
+  <h1> Animated Line Boxes lerp</h1>
+  <div id="grid"></div>
+  <script src="assets/lerp.js"></script>
+</body>
 </html>
