--- a/index.html
+++ b/index.html
@@ -1,53 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>10 Animated Line Boxes — L, X, W Shapes</title>
-<style>
-  body {
-    background: linear-gradient(135deg, #a8edea, #fed6e3);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
-    padding: 20px;
-    color: #333;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 100vh;
-    user-select: none;
-  }
-  h1 {
-    margin-bottom: 25px;
-    font-weight: 700;
-    letter-spacing: 1.2px;
-    text-shadow: 1px 1px 3px rgba(0,0,0,0.15);
-  }
-  #grid {
-    display: grid;
-    grid-template-columns: repeat(5, 180px);
-    grid-gap: 15px;
-    justify-content: center;
-    margin-bottom: 30px;
-  }
-  canvas {
-    border-radius: 10px;
-    background-color: #fff;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-    width: 180px;
-    height: 180px;
-    display: block;
-  }
-  footer {
-    font-size: 0.85rem;
-    color: #555;
-    opacity: 0.7;
-  }
-</style>
-</head>
-<body>
-  <h1> Animated Line Boxes lerp</h1>
-  <div id="grid"></div>
-  <script src="assets/lerp.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Circular Animation</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        background: radial-gradient(circle, #222, #000);
+        overflow: hidden;
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      canvas {
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <canvas id="canvas"></canvas>
+    <script src="assets/circular.js"></script>
+  </body>
 </html>
