hello I am fixing my old stuff, now I am lerp based triangle and  it's much better

--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
-    <script src="assets/circular.js"></script>
+    <script src="assets/centre.js"></script>
   </body>
 </html>
