hello I am fixing my old stuff, now I am bubbling it and  it's much better

--- a/index.html
+++ b/index.html
@@ -1,35 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Circular Animation</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Improved Circular Animation</title>
+  <style>
+    * {
+      margin: 0; padding: 0; box-sizing: border-box;
+    }
+    body, html {
+      height: 100%; width: 100%;
+      background: radial-gradient(circle at center, #111 0%, #000 80%);
+      overflow: hidden;
+      display: flex; justify-content: center; align-items: center;
+    }
+    canvas {
+      display: block;
+      width: 100%; height: 100%;
+      background: transparent;
+    }
+  </style>
+</head>
+<body>
+  <canvas id="canvas"></canvas>
 
-      body {
-        background: radial-gradient(circle, #222, #000);
-        overflow: hidden;
-        height: 100vh;
-        width: 100vw;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      canvas {
-        display: block;
-        width: 100%;
-        height: 100%;
-      }
-    </style>
-  </head>
-  <body>
-    <canvas id="canvas"></canvas>
-    <script src="assets/centre.js"></script>
-  </body>
+  <script src="assets/bubble.js"></script>
+</body>
 </html>
